
[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Tom Pridham <pridham.tom@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

# Dependencies for all targets go here.
[dependencies]
getrandom = { version = "0.2", features = ["wasm-bindgen"] }
rand = { version="0.8.4", default-features = false , features=["small_rng"]}
wasm-bindgen = "0.2"
web-sys = {version = "0.3.46", features =["console"]}
wee_alloc = "0.4"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11", "dynamic"]}

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
bevy_webgl2 = "0.5"

[profile.release]
lto = "thin"
opt-level = 'z'
